first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: boxone
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  - name: boxtwo
    image: redis
---
apiVersion: v1
kind: Pod
metadata:
  name: apache
spec:
  containers:
  - name: boxtwo
    image: lovelearnlinux/webserver:v1
    ports:
    - containerPort: 80
