guarnteed-QoS.yaml
apiVersion: v1
kind: Pod
metadata:
  name: boxone
  labels:
    name: mysql
    instance: jan2024
    version: "2.5"
    component: database
    part-of: frontend
    managed-by: devops
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "200Mi"
        cpu: "200m"
      requests:
        memory: "200Mi"
        cpu: "200m"
