node-affinity-with-NotIn-operator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: afftwo
  labels:
    app: afftwo
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: memory
            operator: NotIn
            values:
            - Large
            - medium
