pod-affinity-and-pod-antiaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: affthree
  labels:
    app: affthree
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - affone
        topologyKey: "kubernetes.io/hostname"
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
#####################################################################################
apiVersion: v1
kind: Pod
metadata:
  name: afffour
  labels:
    app: afffour
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: NotIn
            values:
            - affone
        topologyKey: "kubernetes.io/hostname"
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
