secret.yaml
#kubectl create secret generic dbcred --from-literal password=sunday


apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: mysql
    image: mysql:latest
