taint-toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: affone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: affone
  template:
    metadata:
      labels:
        app: affone
    spec:
      tolerations:
      - key: "food"
        operator: "Equal"
        value: "pizza"
        effect: "NoSchedule"
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
             memory: "64Mi"
             cpu: "250m"
