dynamic-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: lovelearnlinux/webserver:v1
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/var/www/html"
            name: webroot
      volumes:
      - name: webroot
        persistentVolumeClaim:
          claimName: myclaim

---
apiVersion: v1
kind: Service
metadata:
  name: ngix-deployment-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
