probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  annotations:
    kubernetes.io/change-cause: "changing the vesrion to new version to version two"
spec:
  minReadySeconds: 3
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: lovelearnlinux/webserver:v2
        ports:
        - containerPort: 80
        startupProbe:
           exec:
             command:
             - cat
             - /var/www/html/index.html
           initialDelaySeconds: 5
             # periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
          failureThreshold: 2
        livenessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
          failureThreshold: 4

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
             memory: "64Mi"
             cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: ngix-deployment-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
