network-policy-many-to-many.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-network-policy
  namespace: dev
spec:
  podSelector: {}
    #  matchLabels:
    #  role: db
  policyTypes:
  - Ingress
    #  - Egress
  ingress:
  - from:
    #    - ipBlock:
    #    cidr: 172.17.0.0/16
    #    except:
    #    - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prod
      podSelector: {}
    #      matchLabels:
    ports:
    - protocol: TCP
      port: 80
